fix(Learn.jsx) fixed code display overflow border

--- a/src/components/LearnStyle.css
+++ b/src/components/LearnStyle.css
@@ -15,4 +15,5 @@
 .info-text-container {
 	padding: 0.5em 0.75em;
 	transition: opacity 500ms ease-in-out;
+	box-sizing: border-box;
 }
